Fix Firefox control alignment

--- a/src/reports/sample_plates_report.css
+++ b/src/reports/sample_plates_report.css
@@ -146,6 +146,10 @@ h2 {
   text-align: right;
 }
 
+.search-right .search-control label {
+  width: 230px;
+}
+
 .search-left input {
   padding: 4px;
   width: 300px;
